Penambahan Menu Accordion - Card Main Container Cara Memulai

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -166,6 +166,52 @@ img#back-to-top
 	border-radius: 8px;
 	padding: 30px;
 }
+.accordion .content_box
+{
+	position: relative;
+	margin: 10px 20px;
+}
+.accordion .content_box .label
+{
+	position: relative;
+	padding: 10px;
+	background: #2694af;
+	color: #fff;
+	cursor: pointer;
+}
+.accordion .content_box .label::before
+{
+	content: '';
+	position: absolute;
+	top: 50%;
+	right: 20px;
+	transform: translateY(-50%);
+	width: 12px;
+  	height: 6px;
+	background-image: url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 100,0 50,50" style="fill:%23FFFFFF99;" /></svg>');
+  	background-size: contain;
+  	background-repeat: no-repeat;
+  	transition: transform 0.4s;
+}
+.accordion .content_box.active .label::before
+{
+	content: '';
+	transform: translateY(-50%) rotate(0.5turn);
+}
+.accordion .content_box .content
+{
+	position: relative;
+	background: #fff;
+	height: 0;
+	overflow: hidden;
+	overflow-y: auto;
+	transition: 0.5s;
+}
+.accordion .content_box.active .content
+{
+	height: 150px;
+	padding: 10px;
+}
 .container .main .card img
 {
 	width: 734px;
