Penyesuaian Margin Content Box Accordion - Login CSS

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -169,7 +169,7 @@ img#back-to-top
 .accordion .content_box
 {
 	position: relative;
-	margin: 10px 20px;
+	margin: 10px 0;
 }
 .accordion .content_box .label
 {
