Penghapusan Padding - Label Content Box Accordion Login CSS

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -173,9 +173,7 @@ img#back-to-top
 .accordion .content_box .label
 {
 	position: relative;
-	padding: 10px;
-	background: #2694af;
-	color: #fff;
+	background: #ddd;
 	cursor: pointer;
 }
 .accordion .content_box .label::before
