--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -185,7 +185,7 @@ img#back-to-top
 	transform: translateY(-50%);
 	width: 12px;
   	height: 6px;
-	background-image: url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 100,0 50,50" style="fill:%23FFFFFF99;" /></svg>');
+	background-image: '<i class="fas fa-times"></i>';
   	background-size: contain;
   	background-repeat: no-repeat;
   	transition: transform 0.4s;
