--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -174,6 +174,7 @@ img#back-to-top
 {
 	position: relative;
 	display: flex;
+	justify-content: space-between;
 	background: #ddd;
 	cursor: pointer;
 }
