Penetapan Transform - Icon Title Content Box Active Accordion

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -177,9 +177,8 @@ img#back-to-top
 	justify-content: space-between;
 	cursor: pointer;
 }
-.accordion .content_box.active .title::before
+.accordion .content_box.active .title i
 {
-	content: '';
 	transform: translateY(-50%) rotate(0.5turn);
 }
 .accordion .content_box .content
