--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -174,6 +174,7 @@ img#back-to-top
 {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 	cursor: pointer;
 }
 .container .main .card .accordion .content_box .title h4
