Penetapan Color - H4 Sidebar & Side-Nav

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -80,6 +80,7 @@ header .btn-close i
 header .side-nav h4,
 .container .sidebar h4
 {
+	color: #fff;
 	margin-bottom: 36px;
 }
 header .side-nav h4,
