Penetapan Display None - Dark Class in Media Min Width 1127px

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -263,9 +263,9 @@ footer p
 	{
 		visibility: hidden !important;
 	}
-	header .side-nav
+	header .side-nav, .dark
 	{
-		display: none;
+		display: none !important;
 	}
 }
 
