--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -257,6 +257,17 @@ img#back-to-top
 	color: #004e84;
 	margin: 50px 0 32px;
 }
+.container .main a
+{
+	background: #18abe3;
+	font-family: Helvetica, Sans-Serif;
+	font-size: 16px;
+	color: #fff;
+	text-decoration: unset;
+	border: none;
+	border-radius: 10px;
+	padding: 10px 22px;
+}
 footer
 {
 	padding: 24px 0;
