--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -267,6 +267,10 @@ img#back-to-top
 	border-radius: 10px;
 	padding: 10px 22px;
 }
+.container .main a i
+{
+	margin-right: 8px;
+}
 footer
 {
 	padding: 24px 0;
