Penetapan Font Weight Bold - Anchor Main Login CSS

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -262,6 +262,7 @@ img#back-to-top
 	background: #18abe3;
 	font-family: Helvetica, Sans-Serif;
 	font-size: 16px;
+	font-weight: 700;
 	color: #fff;
 	text-decoration: unset;
 	border-radius: 10px;
