--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -257,6 +257,10 @@ img#back-to-top
 	color: #004e84;
 	margin: 50px 0 32px;
 }
+.container .main .button
+{
+	margin: 46px 0 10px;
+}
 .container .main .button a
 {
 	background: #18abe3;
@@ -267,7 +271,6 @@ img#back-to-top
 	text-decoration: unset;
 	border-radius: 10px;
 	padding: 10px 22px;
-	margin: 40px 0;
 }
 .container .main .button a i
 {
